samples/_failures_safe/1761542161_1c0396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c7ccf5e.c: In function ‘main’:
./samples/SAFE/__tmp_3c7ccf5e.c:162:12: error: missing terminating " character
  162 |     printf("Final state:
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_3c7ccf5e.c:162:5: error: expected expression at end of input
  162 |     printf("Final state:
      |     ^~~~~~
./samples/SAFE/__tmp_3c7ccf5e.c:162:5: error: expected declaration or statement at end of input
